www/tablet/css/fhem-tablet-ui.css
/* ... */
.cell-66,
.cell-2-3 {
    width: 66%;
}

.cell-70 {
    width: 70%;
}

.cell-75,
.cell-1-12 {
    width: 75%;
}

.cell-80,
.cell-4-5 {
    width: 80%;
}

.cell-100,
.cell-1-1 {
    width: 100%;
}

.left-align {
    text-align: left;
}

.right-align {
    text-align: right;
}

.center-align,
.middle {
    text-align: center;
}

.top-align {
    vertical-align: top !important;
}

.bottom-align {
    vertical-align: bottom !important;
}


/* end CSS tables */

.inline {
    display: inline-block;
    margin: 0px 5px 0px 0px !important;
}

.inline.narrow.link {
    margin: 0px -4px 0px -4px !important;
}

.newline {
    display: block !important;
}

div[data-type="circlemenu"] {
    min-height: 4em;
    min-width: 4em;
    margin-bottom: 0px;
    display: inline-block;
    vertical-align: middle;
    position: relative;
}

.dialog {
    display: none;
    position: fixed;
    z-index: 2000;
    width: 98%;
    border-bottom: 1px solid #aaa;
    border-radius: 4px;
    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(0, 0, 0, 0.1);
    background-color: #2A2A2A;
    background-clip: padding-box;
    overflow: auto;
}

.dialog-close {
    line-height: 1;
    font-size: 1.5em;
    position: absolute;
    top: 1px;
    right: 2%;
    text-decoration: none;
    color: #bbb;
    cursor: pointer;
}

.dialog-close:hover {
    color: #aa6900;
    -webkit-transition: color 1s ease;
    -moz-transition: color 1s ease;
    transition: color 1s ease;
}

.dialog-starter {}

.events {
    width: 90%;
    height: 90%;
    text-align: left;
    margin-left: 20px;
    overflow: auto;
}

[data-type]:not([data-type="label"]):not(.readonly):not([data-type="symbol"]):not([data-type="spinner"]),
[onclick] {
    cursor: pointer;
}

.label-unit {
    font-size: 50%;
}

.truncate,
.nowrap {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.center {
    text-align: center;
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    height: 100%;
    width: 100%;
}

.narrow {
    margin: -5px 5px -6px 5px !important;
    width: auto;
    text-align: center;
}

[data-type="symbol"].width-narrow,
[data-type="multistatebutton"].width-narrow,
[data-type="switch"].width-narrow,
[data-type="button"].width-narrow,
[data-type="push"].width-narrow,
[data-type="pagebutton"].width-narrow {
    width: 1.5em;
}

[data-type="symbol"].height-narrow,
[data-type="multistatebutton"].height-narrow,
[data-type="switch"].height-narrow,
[data-type="button"].height-narrow,
[data-type="push"].height-narrow,
[data-type="pagebutton"].height-narrow {
    height: 1.5em;
}

.compressed > .famultibutton,
.compress > .famultibutton {
    width: 1em !important;
    height: 1em !important;
    line-height: 1em !important;
}

.wider {
    margin: 15px 15px 15px 15px !important;
    width: auto;
    text-align: center;
}

.top-narrow-10 {
    margin-top: -10px !important;
}

.top-narrow {
    margin-top: -15px !important;
}

.top-narrow-2x,
.top-narrow-2 {
    margin-top: -30px !important;
}

.left-narrow-10 {
    margin-left: -10px !important;
}

.left-narrow {
    margin-left: -15px !important;
}

.left-narrow-2x,
.left-narrow-2 {
    margin-left: -30px !important;
}

.right-narrow-10 {
    margin-right: -10px !important;
}

.right-narrow {
    margin-right: -15px !important;
}

.right-narrow-2x,
.right-narrow-2 {
    margin-right: -30px !important;
}

.top-space {
    margin-top: 15px !important;
}

.top-space-2x,
.top-space-2 {
    margin-top: 30px !important;
}

.top-space-3x,
.top-space-3 {
    margin-top: 45px !important;
}

.left-space {
    margin-left: 15px !important;
}

.left-space-2x,
.left-space-2 {
    margin-left: 30px !important;
}

.left-space-3x,
.left-space-3 {
    margin-left: 45px !important;
}

.left-space-4x,
.left-space-4 {
    margin-left: 60px !important;
}

.right-space {
    margin-right: 15px !important;
}

.right-space-2x,
.right-space-2 {
    margin-right: 30px !important;
}

.right-space-3x,
.right-space-3 {
    margin-right: 45px !important;
}

.bottom-space {
    margin-bottom: 15px !important;
}

.bottom-space-2x,
.bottom-space-2 {
    margin-bottom: 30px !important;
}

.bottom-space-3x,
.bottom-space-3 {
    margin-bottom: 45px !important;
}

.darker {
    color: #8C8C8C;
}

.thin {
    font-weight: 100;
}

.gigantic {
    font-size: 144px !important;
    font-family: robotothin, sans-serif;
    line-height: 120px;
}

.grande {
    font-size: 600% !important;
    font-family: robotothin, sans-serif;
}

.bigger.thin {
    font-size: 450% !important;
    font-family: robotothin, sans-serif;
    font-weight: normal !important;
}

.big.thin {
    font-size: 320% !important;
    font-family: robotothin, sans-serif;
    font-weight: normal !important;
}

.tall {
    font-size: 350% !important;
}

.bigger {
    font-size: 200% !important;
}

.big {
    font-size: 150% !important;
}

.large.thin {
    letter-spacing: 1.1px;
}

.large {
    font-size: 125%;
}

.normal {
    font-size: 100%;
}

.small {
    font-size: 80%;
}

.tiny {
    font-size: 60%;
}

.mini {
    font-size: 50%;
}

.top {
    vertical-align: super;
    top: 0;
}

.bottom {
    vertical-align: baseline;
    bottom: 0;
}

.maxw40 {
    max-width: 40px;
}

.verticalLine {
    border-right-style: outset;
}

[data-type="pagetab"] .label {
    font-size: 50% !important;
    white-space: nowrap;
    padding-top: 30px;
    color: #8C8C8C;
}

.labelright[data-type="pagetab"] .label {
    padding-top: 0px;
    padding-left: 52px;
}

i#warn {
    font-size: 40% !important;
    margin-left: 26%;
    margin-top: -31%;
    color: #aaa;
    font-weight: bold !important;
    font-family: sans-serif;
    letter-spacing: -1px;
}
/* ... */

